--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -112,9 +112,10 @@
   height: 8rem;
   background-color: #FFF;
   border-radius: 2rem;
-  position: absolute;
+  position: fixed;
   top: 50%;
-  right: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
  }
 
