--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -51,7 +51,8 @@
 
 .date-hour {
   font-family: "Poppins", sans-serif;
-  font-size: 10px;
+  font-size: 11px;
+  align-items: center;
 }
 
  .user-reactions {
@@ -60,9 +61,8 @@
  }
 
  .updl {
-  padding-left: 0.2rem;
-  padding-top: 0.4rem;
-  width: 25px;
+  margin-top: 2rem;
+  justify-content: right;
   cursor: pointer;
  }
 
@@ -79,6 +79,7 @@
   padding-top: 2rem;
   margin-left: 0.5rem;
   font-size: 15px;
+  text-align: center;
   font-family: 'Quicksand', sans-serif;
  }
 
@@ -92,7 +93,7 @@
  .button-dlt, .button-ccl {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-  margin-left: 2rem;
+  margin-left: 3.5rem;
   margin-top: 2rem;
   border: none;
   border-radius: 1rem;
@@ -108,9 +109,10 @@
  }
 
  .confirm-style {
-  width: 20rem;
+  width: 25rem;
   height: 8rem;
-  background-color: #FFF;
+  justify-items: center;
+  background-color: #a8dedd;
   border-radius: 2rem;
   position: fixed;
   top: 50%;
@@ -118,6 +120,8 @@
   transform: translate(-50%, -50%);
 
  }
+
+
 
 
  @media screen and (min-width: 320px) and (max-width: 767px) {
