--- a/src/css/feed.css
+++ b/src/css/feed.css
@@ -12,21 +12,20 @@ body{
 }
 
 .form-feed {
-  margin: auto;
-  margin-top: 1rem;
-  margin-bottom: 4rem;
-  background-color: #fff;
-  width: 52rem;
-  height: 20rem;
-  border-radius: 2rem;
   display: flex;
   justify-content: center;
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  background-color: #fff;
+  width: 52rem;
+  height: 22rem;
+  border-radius: 2rem;
 }
 
 .question-feed {
-  width: 80%;
-  height: 70%;
-  margin-left: 6.2rem;
+  width: 46.5rem;
+  height: 14rem;
   background-color: #EDE2E2;
   border: none;
   border-radius: 2rem;
@@ -43,34 +42,27 @@ body{
   margin-top: 0.5rem;
 } 
 
-
 .inputs-source {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin-top: 0.6rem;
   gap: 10px;
-  margin-left: 7rem;
 }
 
 .input-space {
-  margin: auto;
-  width: 18rem;
+  width: 23rem;
   height: 2rem;
 }
 
 
-.logout{
-    margin: 0.6rem;
-}
-
 
 .btnFeed {
   border-radius: 2rem;
-  background-color: #c69b73;
+  background-color: #d5a374;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   padding: 0rem 0.5rem;
-  margin-top: 0.5rem;
 }
 
 .btnFeed:hover {
@@ -79,16 +71,23 @@ body{
 
 .button-logout {
   display: flex;
-  align-content: center;
-  width: 10%;
+  width: 5rem;
   height: 2rem;
   padding: .2rem 1.6rem;
-  margin-right: 6rem;
+  background-color: #a9a9a9;
+}
+
+.button-logout:hover{
+  background-color: #c4c4c4;
 }
 
 .button-publish {
-  width: 15%;
+  width: 7rem;
   height: 2rem;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1.4rem;
+  padding-top: 0.4rem;
 }
 
 
@@ -98,6 +97,7 @@ body{
 
 .question-feed::-webkit-input-placeholder {
   font-style: italic;
+  font-size: 1.1rem;
   margin-top: 2rem;
 }
 
@@ -109,42 +109,34 @@ body{
   border-radius: 2rem;
 }
 
+.publish-logout {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 1rem;
+  margin-right: 3rem;
+}
+
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   
   .form-feed {
     width: 30rem;
-    height: 15.5rem;
+    height: 18rem;
     padding: 0.7rem;
   }
   
   .question-feed {
-    width: 28.5rem;
+    width: 27rem;
     height: 10rem;
     padding: 1rem;
-    margin-left: 0rem;
   }
 
   .author, .book {
     width: 70%;
     height: 20%;
-  } 
-
-  .button-logout {
-    margin-top: 12.8rem;
-    width: 6rem;
-    height: 1.5rem;
-    margin-left: -11rem;
-    padding: .0.5rem 1rem;
-  }
-  
-  .button-publish {
-    margin-left: 1.4rem;
-    width: 6rem;
-    height: 1.5rem;
-    padding: 0.6 1rem;
-    margin-top: 2rem;
-  }
+  }   
 
   .btnFeed {
     font-size: 0.7rem;
@@ -156,7 +148,6 @@ body{
     font-size: 0.5rem;
   } 
   
-
   .feed-page {
     background:transparent;
   }
@@ -165,9 +156,38 @@ body{
     width: 30rem;
   }
 
-  .inputs-source {
-    width: 40%;
+  .button-logout {
+    width: 2rem;
+    padding-right: 3rem;
   }
+
+  .button-publish {
+    width: 5rem;
+    padding-right: 1rem;
+    padding-top: 0.4rem;
+  }
+
+  .input-space{
+    width: 12rem;
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  .inputs-source{
+    justify-content: center;
+
+  }
+
+  .question-feed::-webkit-input-placeholder{
+    font-size: 1rem;
+  }
+
+  .input-space::-webkit-input-placeholder{
+    font-size: 0.8rem;
+  }
+
 
   
 }
