--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -184,4 +184,15 @@
     margin-left: 5rem;
  }
 
-}
+.edit-style{
+    width: 30rem;
+    height: 18rem;
+    padding: 0.7rem;
+  }
+  
+  .edit-post-ipt {
+    width: 24rem;
+    height: 8rem;
+    padding: 1rem;
+  }
+} 
