--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -92,17 +92,28 @@
   background-color: #d3ae6a;
  }
 
- .button-dlt, .button-ccl, .button-update, .button-update-cancel {
+ .buttons-post {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-  margin-left: 3.5rem;
-  margin-top: 2rem;
   border: none;
   border-radius: 1rem;
+ }
+
+ .button-dlt, .button-ccl {
+  margin-left: 3.5rem;
+  margin-top: 2rem;
   width: 30%;
   height: 20%;
  }
 
+ .button-update, .button-update-cancel {
+  margin-left: 8rem;
+  margin-top: 4rem;
+  padding: 0.5rem;
+  width: 20%;
+  height: 10%;
+ }
+ 
  .button-ccl, .button-update-cancel {
   background-color: rgba(79, 86, 86, 0.219);
  }
@@ -194,5 +205,10 @@
     width: 24rem;
     height: 8rem;
     padding: 1rem;
+  }
+
+  .button-update, .button-update-cancel {
+    margin-top: 0.5rem;
+    margin-left: 6rem;
   }
 } 
