ajuste erros eslint css

--- a/src/css/feed.css
+++ b/src/css/feed.css
@@ -18,13 +18,13 @@ body{
   margin-top: 1rem;
   margin-bottom: 2rem;
   background-color: #fff;
-  width: 80%;
+  width: 52rem;
   height: 22rem;
   border-radius: 2rem;
 }
 
 .question-feed {
-  width: 70%;
+  width: 46.5rem;
   height: 14rem;
   background-color: #EDE2E2;
   border: none;
