--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,9 +108,45 @@ body {
   background-color: #cdbcac;
 }
 
-.button-signup:hover {
+.button-signup {
+  border-radius: 2rem;
+  background-color: #d6a97e;
+  margin-top: 2rem;
+  width: 8rem;
+  height: 2rem;
+}  
+
+  .button-signup:hover {
   background-color: #c69b73;
+  }
+
+.form-signup {
+  font-family: "Poppins", sans-serif;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2rem;
+  width: 35rem;
+  height: 44rem;
+  margin: 1rem 0.5rem;
 }
+
+.img-logo {
+margin-top: 2rem;
+}
+
+.name-input {
+  justify-items: left;
+}
+
+.input-signup {
+  border-radius: 0.5rem;
+  background-color: #abd9d8;
+  width: 80%;
+  height: 2.1rem;
+}
+
 
 @media screen and (min-width: 1201px) {
 
@@ -146,19 +182,10 @@ body {
   }
 
   .form {
-    width: 40rem;
-    height: 43rem;
+    width: 35rem;
+    height: 44rem;
     font-size: 20px;
     margin: 1rem 0.5rem;
-  }
-
-  .input-login {
-    width: 80%;
-    font-size: 18px;
-  }
-
-  .button-login {
-    font-size: 20px;
   }
 }
 
@@ -200,13 +227,6 @@ body {
     height: 40rem;
     font-size: 20px;
 
-  }
-
-  .form-signup {
-    width: 50rem;
-    height: 40rem;
-    font-size: 20px;
-    margin-right: 0.6rem;
   }
 
   .input-login {
@@ -257,14 +277,13 @@ body {
   .form-signup {
     font-family: "Poppins", sans-serif;
     background-color: #fff;
-    width: 40rem;
-    height: 42.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 2rem;
-    margin-top: 1.4rem;
-    margin-right: 0.6rem;
+    width: 20rem;
+    height: 35rem;
+    margin: 2rem auto;
   }
 
   .name-input {
@@ -281,80 +300,9 @@ body {
   .button-signup {
     border-radius: 2rem;
     background-color: #d6a97e;
-    width: 11rem;
-    height: 2.5rem;
     margin-top: 2rem;
-    font-size: medium;
-  }
+    width: 8rem;
+    height: 2rem;
+    font-size: small;
+  }  
 }
-
-  @media screen and (min-width: 320px) and (max-width: 1023px) {
-
-    .input-signup {
-      width: 15rem;
-      height: 1.5rem;
-    }
-  
-    .img-logo {
-      width: 12rem;
-      height: 10rem;
-      margin-bottom: 2rem;
-      margin-top: 2rem;
-    }
-    
-    .form-signup {
-      width: 20rem;
-      height: 35rem;
-      border-radius: 2rem;
-      margin: 2rem auto;
-    }
-
-    .button-signup {
-      margin-top: 2rem;
-      width: 8rem;
-      height: 2rem;
-      font-size: small ;
-    }
-  }
-
-  @media screen and (min-width: 1024px) and (max-width: 1200px)  {
-
-    .home-page, .signup-page {
-      display: flex;
-      flex-direction: row;
-    }
-  
-    .background-home {
-      display: flex;
-      flex-direction: column;
-      max-height: 700px;
-    }
-  
-    .img-woman {
-      width: 40rem;
-      height: 50rem;
-      margin-right: 1rem;
-      margin-top: 0.5rem;
-    }
-    .form-signup {
-      width: 50rem;
-      height: 40rem;
-      font-size: 20px;
-      margin: 1rem 0.5rem;
-    }
-  
-    .input-signup {
-      width: 80%;
-      font-size: 18px;
-    }
-  
-    .button-signup {
-      font-size: 20px;
-      width: 12rem;
-      height: 2rem;
-      margin-top: 2rem;
-    }
-    .img-logo {
-      margin-top: 2rem;
-    }
-  }
